# hybrid-Lambda

./: CMakeLists.txt
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp  options.h  utils.h
doc/: CMakeLists.txt
src/: sim_gt.hpp
tests/: CMakeLists.txt  checkbinary.sh
tests/unit_test/: test_hybridLambda.cpp
tests/unittest/: test_hybridLambda.cpp
